syntax = "proto3";

package SellerReturnsCommonTypes;

option csharp_namespace = "Ozon.Rms.SellerReturns.Grpc.SellerReturnsCommonTypes";
option go_package = "gitlab.ozon.ru/rms-group/seller-returns/gopkg/common-types";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

message Pagination {
    google.protobuf.Int64Value id = 1;
    int32 limit = 2;
    DirectionType direction_type = 3;
    oneof value {
        google.protobuf.Int64Value long_value = 4;
        google.protobuf.Timestamp date_time_value = 5;
        google.protobuf.DoubleValue double_value = 6;
    }
}

message Sort
{
    SortColumnType column_type = 1;
    SortType sort_type = 2;
}

enum SortColumnType
{
    created = 0;
    price = 1;
    due_date = 2;
    state_change = 3;
    operation_logistic_date = 4;
    id = 5;
    start_utilization_timer = 6;
}

enum DirectionType
{
    next = 0;
    previous = 1;
}

enum SortType
{
    ascending = 0;
    descending = 1;
}

enum ReturnColorType
{
    in_progress = 0;
    on_approval = 1;
    conflict = 2;
    cancel = 3;
    done = 4;
    none = 5;
}

message ProductModel {
    google.protobuf.StringValue name = 1;
    google.protobuf.StringValue offer_id = 2;
    int64 sku = 3;
    MoneyModel seller_price = 4;
    MoneyModel client_price = 5;
}

message MoneyModel {
    google.protobuf.DoubleValue value = 1;
    google.protobuf.StringValue currency_code = 2;
}

message VisualEnum {
    int32 Id = 1;
    string Name = 2;
}

message VisualReturnStatus {
    ReturnColorType color = 1;
    string name = 2;
    string sys_name = 3;
    bool is_money_icon = 4;
    string money_tooltip = 5;
    MoneyReturnStatus money_return_state = 6;
}

message MoneyReturnStatus {
    google.protobuf.StringValue name = 1;
    google.protobuf.StringValue sys_name = 2;
}

enum FilterValueType
{
    visual_status = 0;
    type = 1;
}

message FilterValue {
    FilterValueType type = 1;
    string value = 2;
}

message GetFilterValues{

    message Request{
        int64 company_id = 1;
        int32 pre_filter_type = 2;
        SellerReturnsCommonTypes.FilterValueType filter_type = 3;
    }
    message Response{
        SellerReturnsCommonTypes.FilterValueType filter_type = 1;
        repeated FilterValue values = 2;
    }

    message FilterValue{
        string display_name = 1;
        repeated string values = 2;
    }
}

message ClientModel{
    bool is_premium = 1;
    google.protobuf.StringValue name = 2;
    google.protobuf.Int64Value id = 3;
    bool is_show_phone_number = 4;
}


message Timer {
    google.protobuf.Timestamp start = 1;
    google.protobuf.Timestamp end = 2;
    google.protobuf.Timestamp progress = 3;
    google.protobuf.Timestamp danger = 4;
}

message RelativeMoney{
    double amount = 1;
    string currency = 2;
    double percent = 3;
}

message Money{
    double amount = 1;
    string currency = 2;
}






